# fair-psgg

./: .gitignore  Makefile  README.md  config.schema.json  project_paths.py  pyproject.toml  rsync-exclude.txt
configs/table2/: boxes-loc-sem.json  boxes-loc.json  boxes-sem.json  boxes.json  masks-loc-sem.json  masks-loc.json  masks-sem.json  masks.json
configs/table3/: masks-loc-sem-01node.json  masks-loc-sem-05node.json  masks-loc-sem-0node.json
configs/table4/: tfm-emb192.json  tfm-emb256.json
fair_psgg/: __main__.py  config.py  from_config.py  loss.py  metrics.py  repl.py  trainer.py  utils.py  visualize.py
fair_psgg/data/: __init__.py  augmentation.py  common.py  data.py  load_entries.py  pretrain_pair_data.py  rel_sample.py  single_rel_data.py  split_batch.py
fair_psgg/models/: building_blocks.py  daniformer.py  feature_extractors.py  frequency_bias.py  misc.py  transformer_blocks.py
fair_psgg/tasks/: inference.py
scripts/: convert_openpsg.py  eval2dataset.py  evaluate.py  get_match_stats.py  infer_segmasks.py  match_psg.py
