[tool.poetry]
name = "fair-psgg"
version = "1.0.0"
description = ""
authors = ["Julian Lorenz <julian.lorenz@uni-a.de>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.1.1"
torchvision = "^0.16.1"
tqdm = "^4.66.1"
scikit-learn = "^1.3.2"
tensorboard = "^2.15.1"
pydantic = "^2.5.2"
transformers = "^4.35.2"
timm = "^0.9.12"
h5py = "^3.10.0"
panopticapi = {git = "https://github.com/cocodataset/panopticapi.git"}
numpy = "<2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
