[tool.poetry]
name = "fair-psgg"
version = "1.0.0"
description = "Official implementation of our paper 'A Fair Ranking and New Model for Panoptic Scene Graph Generation', accepted at ECCV 2024"
authors = ["Julian Lorenz <julian.lorenz@uni-a.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.4.1"
torchvision = "^0.19.1"
tqdm = "^4.66.1"
scikit-learn = "^1.3.2"
tensorboard = "^2.15.1"
pydantic = "^2.5.2"
transformers = "^4.50.0"
timm = "^0.9.12"
h5py = "^3.10.0"
panopticapi = {git = "https://github.com/cocodataset/panopticapi.git"}
numpy = "<2"
pandas = "^2.2.2"

[tool.poetry.scripts]
fair-psgg = "fair_psgg.__main__:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
